--- a/data-binding-test/app/build.gradle
+++ b/data-binding-test/app/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // gson-support( added since 1.2.0)
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1-beta'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.3-beta'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.1'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.3-beta'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.3'
 
