--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.2'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1-beta2'
     compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1'
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.1'
