--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -18,7 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -49,8 +49,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.2'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1-beta2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.3'
     apt 'com.squareup:javapoet:1.9.0'
     apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.1'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
@@ -59,7 +59,7 @@ dependencies {
     compile project(':data-mediator-android')
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.android.util2:android-util2:1.1.8'
+    compile 'com.heaven7.android.util2:android-util2:1.1.9'
     //butterknife
     apt "com.jakewharton:butterknife-compiler:8.2.0"
     compile 'com.jakewharton:butterknife:8.2.0'
