--- a/Data-mediator-demo/data-mediator-android/build.gradle
+++ b/Data-mediator-demo/data-mediator-android/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 113
-        versionName '1.1.3'
+        versionCode 114
+        versionName '1.1.4'
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -33,7 +33,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.heaven7.core.adapter:adapter:1.8.8'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.3-beta3'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.3'
 }
 
 ext {
