--- a/data-binding-test/app/build.gradle
+++ b/data-binding-test/app/build.gradle
@@ -40,20 +40,18 @@ dependencies {
     testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // gson-support( added since 1.2.0)
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1-beta2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.3-beta3'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.4-beta4'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.3-beta4'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.3'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.3'
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.4' // if you want to support data-bind of android
 
     // if you want generate annotation of gson。(since 1.2.0 auto added)
     compile "com.google.code.gson:gson:2.8.2"
-    // if you want to support data-bind of android
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.0'
 
     compile 'com.heaven7.core.util:util-v1:1.1.2'
-    compile 'com.heaven7.android.util2:android-util2:1.1.8'
+    compile 'com.heaven7.android.util2:android-util2:1.1.9'
 
     annotationProcessor "com.jakewharton:butterknife-compiler:8.5.1"
     compile 'com.jakewharton:butterknife:8.5.1'
