add support for pending property chain

--- a/data-binding-test/app/src/main/AndroidManifest.xml
+++ b/data-binding-test/app/src/main/AndroidManifest.xml
@@ -31,9 +31,12 @@
         <activity android:name=".sample.TestBindArrayPropertyToOneView2"
             android:label="BindArrayPropertyToOneView2"/>
 
-        <activity android:name=".sample.TestRootViewBindActivity" android:label="RootViewBind"/>
-        <activity android:name=".sample.TestRootViewBindActivity2" android:label="RootViewBind2"/>
-
+        <activity android:name=".sample.propertychain.SimplePropertyChainActivity"
+            android:label="SimplePropertyChain"/>
+        <activity android:name=".sample.propertychain.ListPropertyChainBindActivity"
+            android:label="ListPropertyChain"/>
+        <activity android:name=".sample.propertychain.PendingPropertyChainActivity"
+            android:label="PendingPropertyChain"/>
 
         <activity android:name=".sample.adapter.TestDatabindingAdapter" android:label="DatabindingAdapter"/>
         <activity android:name=".sample.adapter.DataBindingAdapterWithHeader" android:label="DataBindingAdapterWithHeader"/>
