--- a/data-binding-test/app/build.gradle
+++ b/data-binding-test/app/build.gradle
@@ -16,6 +16,10 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
@@ -40,10 +44,10 @@ dependencies {
     testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // gson-support( added since 1.2.0)
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.4-beta5'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.2'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.4'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.3'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.4'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.4' // if you want to support data-bind of android
 
