--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testCompile 'com.google.code.gson:gson:2.8.2'
     testCompile 'com.heaven7.java.data.mediator:data-mediator:1.2.2'
     testCompile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.1'
+    testCompileOnly "org.projectlombok:lombok:1.16.18"
 
     compile 'com.heaven7.java.base:Java-base:1.1.0'
     compile 'com.squareup:javapoet:1.9.0'
