--- a/data-mediator-lint/dmchecks/installv1.gradle
+++ b/data-mediator-lint/dmchecks/installv1.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.github.dcendents.android-maven'
-//apply plugin: 'maven'
+//apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven'
 
 install {
     repositories.mavenInstaller {
