--- a/data-mediator-lint/app/build.gradle
+++ b/data-mediator-lint/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.4' // if you want to support data-bind of android
 
     //lintChecks project(path: ':dmchecks', configuration: "lintChecks")
+    compile project(':dmlint')
 }
 
