--- a/data-mediator-lint/dmlint/src/main/AndroidManifest.xml
+++ b/data-mediator-lint/dmlint/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="heaven7.aarwrap" />
+    package="com.heaven7.android.data.mediator.lint" />
