--- a/plugin-data-mediator-test/build.gradle
+++ b/plugin-data-mediator-test/build.gradle
@@ -28,11 +28,11 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.1'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.4-beta3'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.3'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.5-beta3'
 
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.3'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.5-beta4'
     apt 'com.squareup:javapoet:1.9.0'
 }
 
