--- a/Data-mediator-demo/app/src/main/AndroidManifest.xml
+++ b/Data-mediator-demo/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.TestSparseArrayActivity" android:label="TestSparseArray"/>
         <activity android:name=".activity.TestAnalyseActivity" android:label="TestAnalyseActivity"/>
         <activity android:name=".activity.TestSelfMethodWithImplInterface" android:label="TestSelfMethod"/>
+        <activity android:name=".activity.TestGroupPropertyActivity" android:label="TestGroupProperty"/>
 
         <activity android:name=".activity.data_binding.TestDatabindingAdapter"
             android:label="TestDatabindingAdapter"/>
