--- a/Data-mediator-demo/build.gradle
+++ b/Data-mediator-demo/build.gradle
@@ -2,25 +2,25 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
-        maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+       // classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+       // classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+       // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven { url "https://maven.google.com" }
     }
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
