--- a/Data-mediator-demo/test_compiler/build.gradle
+++ b/Data-mediator-demo/test_compiler/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+   // buildToolsVersion '26.0.3'
 
     defaultConfig {
         minSdkVersion 14
@@ -20,25 +20,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
+   /* lintOptions {
         abortOnError false
-    }
+    }*/
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+   // compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
 
     //数据层框架的库
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.2'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.4'
-    apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.4'
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
+    implementation 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.3'
+    implementation 'com.heaven7.java.data.mediator:data-mediator:1.4.5-beta5'
+    annotationProcessor 'com.squareup:javapoet:1.9.0'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.5-beta4'
+    implementation 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
 
 }
