--- a/data-mediator/build.gradle
+++ b/data-mediator/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup:javapoet:1.9.0'
+    testCompile 'org.apache.commons:commons-jexl:2.1.1'
     compile 'com.heaven7.java.base:Java-base:1.1.0'
 }
 
