--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -30,6 +30,10 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    /*dataBinding{
+        enabled = true
+    }*/
 }
 //fix compat of com.android.support.
 configurations.all {
