--- a/data-mediator-annotations/build.gradle
+++ b/data-mediator-annotations/build.gradle
@@ -38,7 +38,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.annotation'
     artifactId = 'data-mediator-annotations'
-    publishVersion = '1.2.4'
+    publishVersion = '1.2.5-beta'
     desc = 'this is a annotation lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
