--- a/data-mediator-compiler/build.gradle
+++ b/data-mediator-compiler/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     compile 'com.heaven7.java.base:Java-base:1.1.0'
     compile 'com.squareup:javapoet:1.9.0'
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.4'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.5-beta'
     //compile files('libs/data-mediator-annotations.jar')
 }
 
@@ -43,7 +43,7 @@ publish {
     userOrg = 'lightsun' //bintray user name
     groupId = 'com.heaven7.java.data.mediator.compiler'
     artifactId = 'data-mediator-compiler'
-    publishVersion = '1.4.5-beta12'
+    publishVersion = '1.4.5-beta14'
     desc = 'this is a java compiler lib of data mediator. '
     website = 'https://github.com/LightSun/data-mediator'
 }
